deploy/https-reactivemanifesto-route.yaml
# This is OpenShift online specific yaml
#apiVersion: route.openshift.io/v1
apiVersion: networking.k8s.io/v1
#kind: Route
kind: Ingress
metadata:
  labels:
    app: reactivemanifesto-website
  name: reactivemanifesto.org
  namespace: reactivemanifesto-website
spec:
  tls:
    - hosts:
        - www.lightbend.com
      secretName: rm-secret-tls
  rules:
    - host: reactivemanifesto.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reactivemanifesto-website-svc
                port:
                  number: 443
#  host: reactivemanifesto.org
#  port:
#    targetPort: 9000-tcp
#  to:
#    kind: Service
#    name: reactivemanifesto-website-svc
#    weight: 100
#  wildcardPolicy: None
#  tls:
#    insecureEdgeTerminationPolicy: Redirect
#    termination: edge
#    certificate: GET_FROM_COMODOSSL
#    key: BUILT_LOCALLY_AND_FED_TO_COMODOSSL
#    caCertificate: GET_FROM_COMODOSSL
