deploy/reactivemanifesto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: mcrt-f9763912-d9f8-4c0f-8efa-336ef806be07
    ingress.kubernetes.io/backends: '{"k8s1-42e4f580-kube-system-default-http-backend-80-348ae31c":"HEALTHY","k8s1-42e4f580-reactivemanifest-reactivemanifesto-we-90-f935911d":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s2-fr-dpdfc38p-reactivemanifesto--reactivemanifesto--zzbarglx
    ingress.kubernetes.io/https-forwarding-rule: k8s2-fs-dpdfc38p-reactivemanifesto--reactivemanifesto--zzbarglx
    ingress.kubernetes.io/https-target-proxy: k8s2-ts-dpdfc38p-reactivemanifesto--reactivemanifesto--zzbarglx
    ingress.kubernetes.io/ssl-cert: mcrt-f9763912-d9f8-4c0f-8efa-336ef806be07
    ingress.kubernetes.io/target-proxy: k8s2-tp-dpdfc38p-reactivemanifesto--reactivemanifesto--zzbarglx
    ingress.kubernetes.io/url-map: k8s2-um-dpdfc38p-reactivemanifesto--reactivemanifesto--zzbarglx
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.allow-http":"true","kubernetes.io/ingress.class":"gce","kubernetes.io/ingress.global-static-ip-name":"k8s2-fr-dpdfc38p-reactivemanifesto--reactivemanifesto--zzbarglx","networking.gke.io/managed-certificates":"reactive-manifesto","networking.gke.io/v1beta1.FrontendConfig":"frontendconfig"},"name":"reactivemanifesto-ingress","namespace":"reactivemanifesto-website"},"spec":{"rules":[{"host" [...]
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: k8s2-fr-dpdfc38p-reactivemanifesto--reactivemanifesto--zzbarglx
    networking.gke.io/managed-certificates: reactive-manifesto
    networking.gke.io/v1beta1.FrontendConfig: frontendconfig
  creationTimestamp: "2023-10-09T00:33:20Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 2
  name: reactivemanifesto-ingress
  namespace: reactivemanifesto-website
  resourceVersion: "552911544"
  uid: 2086dc78-067e-46fb-bc6d-9e59bc982fb2
spec:
  rules:
  - host: reactivemanifesto.org
    http:
      paths:
      - backend:
          service:
            name: reactivemanifesto-website-7n7gz
            port:
              number: 9000
        path: /*
        pathType: ImplementationSpecific
  - host: www.reactivemanifesto.org
    http:
      paths:
      - backend:
          service:
            name: reactivemanifesto-website-7n7gz
            port:
              number: 9000
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 34.120.167.124
