deploy/reactivemanifesto-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reactivemanifesto-website
  labels:
    name: reactivemanifesto-website
